sna: Clear cursor image after rotation

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=81886
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>